syntax = "proto2";
import "yara.proto";

package dotnet;

option (yara.module_options) = {
  name : "dotnet"
  root_message: "dotnet.Dotnet"
  rust_module: "dotnet"
};

message Dotnet {
  optional bool is_dotnet = 1;
  optional string module_name = 2;
  optional bytes version = 3;  // TODO: should be string?
  
  optional uint64 number_of_streams = 4;
  optional uint64 number_of_guids = 5;
  optional uint64 number_of_resources = 6;
  optional uint64 number_of_generic_parameters = 7;
  optional uint64 number_of_base_types = 8;
  optional uint64 number_of_methods = 9;
  optional uint64 number_of_classes = 10;
  optional uint64 number_of_assembly_refs = 11;
  optional uint64 number_of_modulerefs = 12;
  optional uint64 number_of_user_strings = 13;
  optional uint64 number_of_constants = 14;
  optional uint64 number_of_field_offsets = 15;

  repeated Stream streams = 16;

  repeated string guids = 17;
  repeated bytes constants = 18;
  optional Assembly assembly = 19;
  repeated AssemblyRef assembly_refs = 20; 
  repeated Resource resources = 21;
  repeated Class classes = 22;
  repeated uint32 field_offsets = 23;
}

message Assembly {
  optional string name = 1;
  optional string culture = 2;
  required Version version = 3;
}

message AssemblyRef {
  optional string name = 1;
  optional bytes public_key_or_token = 2;
  required Version version = 3;
}

message Stream {
  required string name = 1;
  required uint32 offset = 2;
  required uint32 size = 3;
}

message Version {
  required uint32 major = 1;
  required uint32 minor = 2;
  required uint32 build_number = 3;
  required uint32 revision_number = 4;
}

message Resource {
  required uint32 offset = 1;
  required uint32 length = 2;
  required string name = 3;
}

message Class {
  required string fullname = 1;
  required string visibility = 2;
  required string type = 3;
  repeated string base_types = 4;
  required bool abstract = 5;
  required bool sealed = 6;
}